# wfrp-helper

./: README.md  stack.yaml  warhammer-helper.cabal
.github/workflows/: haskell.yml
.stack-work/: stack.sqlite3
.stack-work/ghci/891583a1/: cabal_macros.h
.stack-work/ghci/92764b4f/: cabal_macros.h
.stack-work/ghci/eaf7e061/: cabal_macros.h
lib/: Dice.hs  Printing.hs
lib/Data/: Names.hs  People.hs
lib/Language/: Dice.hs  Entity.hs  Main.hs  Repl.hs
lib/Model/: Dice.hs  Entity.hs  Item.hs  Main.hs  Modifier.hs  Statline.hs
src/: Dice.hs  Main.hs  Names.hs  Printing.hs
src/Model/: Entity.hs  Item.hs
test/Test/: DiceSpec.hs  EntitySpec.hs  ReadmeSpec.hs
