name:                warhammer-helper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/warhammer-helper#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:       lib
  exposed-modules:      Model.Entity,
                        Model.Dice, 
                        Model.Item, 
                        Model.Statline, 
                        Model.Modifier,
                        Data.People,
                        Data.Names, 
                        Language.Dice,
                        Language.Entity,
                        Language.Main,
                        Language.Repl,
                        Printing
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base >= 4.7 && < 5,
                        random == 1.1,
                        lens-simple,
                        parsec >= 3.1.14

executable warhammer-helper
  hs-source-dirs:       src
  main-is:              Main.hs
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        random == 1.1,
                        lens-simple,
                        parsec >= 3.1.14,
                        warhammer-helper

test-suite warhammer-helper-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        Test.DiceSpec
                        Test.EntitySpec
  ghc-options:          -Wall
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        random == 1.1,
                        lens-simple,
                        parsec >= 3.1.14,
                        hspec,
                        warhammer-helper